atualizacao na to-do list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <i class="fa-solid fa-check-double"></i>
                 </button>
             </div>
-            <button class="cancel-edit-btn">Cancelar</button>
+            <button class="cancel_edit_btn">Cancelar</button>
         </form>
         <div class="toolbar">
             <div class="search">
@@ -44,18 +44,19 @@
                     <button id="erase_button">
                     <i class="fa-solid fa-delete-left"></i>
                     </button>
-
                 </form>
             </div>
-            <div class="filter">Filtrar:</div>
-            <select id="filter_select">
-                <option value="all">Todos</option>
-                <option value="done">Feitas</option>
-                <option value="todo">A fazer</option>
-            </select>
+            <div class="filter">
+                <h4>Filtrar:</h4>
+                <select id="filter_select">
+                    <option value="all">Todos</option>
+                    <option value="done">Feitas</option>
+                    <option value="todo">A fazer</option>
+                </select>
+            </div>
         </div>
         <div id="todo_list">
-            <div class="todo">
+            <div class="todo done">
                 <h3>Estou fazendo alguma coisa</h3>
                 <button class="finish_todo">
                     <i class="fa-solid fa-check"></i>
