Atualizacao lista de tarefas

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 <button class="finish_todo">
                     <i class="fa-solid fa-check"></i>
                 </button>
-                <button class="edit-todo">
+                <button class="edit_todo">
                     <i class="fa-solid fa-pen"></i>
                 </button>
-                <button class="remove-todo">
+                <button class="remove_todo">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </div>
@@ -73,10 +73,10 @@
                 <button class="finish_todo">
                     <i class="fa-solid fa-check"></i>
                 </button>
-                <button class="edit-todo">
+                <button class="edit_todo">
                     <i class="fa-solid fa-pen"></i>
                 </button>
-                <button class="remove-todo">
+                <button class="remove_todo">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </div>
